--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -11,6 +11,16 @@
 .gridset{
     padding-top: 7%;
 }
+.logogo{
+    padding-top:3%;
+    padding-left:7%;
+    box-shadow:0px 10px 30px -5px rgba(0, 0, 0, 0.5);
+    width:400px;
+    height:450px;
+    border-radius:15px;
+    background-color:white;
+    color:black;
+}
 @media only screen and (max-width:600px){
     .logon{
         /* padding-top:3%;
